--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "To help get started on react",
   "main": "index.js",
   "scripts": {
+    "watch": "webpack --w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Dan Kesler",
@@ -15,7 +16,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "css-loader": "^0.23.1",
-    "webpack": "^1.12.9"
+    "webpack": "^1.14.0"
   },
   "babel": {
     "presets": [
